# rtradez

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HOW_TO_VALIDATE.md  LICENSE  Makefile  QUICK_REFERENCE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  test-coverage.yml
demo_benchmark_results/: benchmark_results.csv  benchmark_results.json
docs/: testing-coverage.md
examples/: advanced_optimization_demo.py  advanced_research_demo.py  advanced_temporal_alignment_demo.py  best_strategy_validation.py  caching_and_optimization_demo.py  cli_comprehensive_demo.py  cli_quick_demo.py  complete_ml_pipeline.py  comprehensive_benchmark_demo.py  comprehensive_benchmark_validation.py  comprehensive_data_integration_demo.py  comprehensive_risk_management_demo.py  dataset_combination_and_validation_demo.py  portfolio_risk_integration_demo.py  pydantic_integration_demo.py  quick_start.py  quick_test.py  sklearn_interface_demo.py  trading_benchmark_demo.py  validation_plotting.py  validation_summary.py
scripts/: generate_comprehensive_tests.py  run_tests.sh  test_coverage.py
src/rtradez/: __init__.py  base.py  cli.py
src/rtradez/benchmarks/: __init__.py  core.py  latency.py  memory.py  performance.py  stress.py  validation.py
src/rtradez/cli/: __init__.py  analysis.py  benchmark.py  config.py  data.py  main.py  portfolio.py  risk.py  trading_benchmark.py
src/rtradez/data_sources/: __init__.py  base_provider.py  data_manager.py
src/rtradez/data_sources/alternative/: __init__.py  sentiment.py
src/rtradez/data_sources/crypto/: __init__.py  spot_prices.py
src/rtradez/data_sources/economic/: __init__.py  fred.py
src/rtradez/datasets/: __init__.py  benchmark_datasets.py  core.py  standardizers.py  transformers.py  validators.py  volatility.py
src/rtradez/methods/: __init__.py  backtest.py  builder.py  greeks.py  strategies.py
src/rtradez/metrics/: __init__.py  comparison.py  options.py  performance.py  risk.py
src/rtradez/pipeline/: __init__.py  pipeline_optimizer.py
src/rtradez/portfolio/: __init__.py  portfolio_manager.py
src/rtradez/research/: __init__.py  advanced_backtest.py  greeks_analysis.py  regime_detection.py  visualization.py
src/rtradez/risk/: __init__.py  margin_calculator.py  portfolio_risk.py  position_sizing.py  risk_limits.py  risk_monitor.py
src/rtradez/trading_benchmarks/: __init__.py  performance_metrics.py  strategy_benchmarks.py
src/rtradez/utils/: caching.py  dataset_combiner.py  experiments.py  optimization.py  temporal_alignment.py  time_bucketing.py
src/rtradez/validation/: model_validation.py  overfitting_prevention.py  time_series_cv.py
tests/: __init__.py  conftest.py  test_advanced_backtest.py  test_backtest.py  test_base.py  test_base_provider.py  test_benchmark_datasets.py  test_benchmarks_framework.py  test_builder.py  test_caching.py  test_cli.py  test_comparison.py  test_core.py  test_data_manager.py  test_data_sources_integration.py  test_dataset_combiner.py  test_experiments.py  test_fred.py  test_greeks.py  test_greeks_analysis.py  test_integration.py  test_model_validation.py  test_optimization.py  test_options.py  test_overfitting_prevention.py  test_performance.py  test_pipeline_optimizer.py  test_portfolio_manager.py  test_regime_detection.py  test_risk.py  test_risk_management.py  test_sentiment.py  test_spot_prices.py  test_standardizers.py  test_strategies.py  test_temporal_alignment.py  test_time_bucketing.py  test_time_series_cv.py  test_trading_benchmarks.py  test_transformers.py  (+4 more)
