[project]
name = "rtradez"
version = "0.1.0"
description = "Comprehensive Options Trading Dataset Organization & Analysis Framework"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Applied AI Systems, LLC", email = "russell@appliedaisystems.com"}
]
keywords = ["options", "trading", "finance", "sklearn", "backtesting", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "backtrader>=1.9.78.123",
    "bt>=1.1.2",
    "diskcache>=5.6.3",
    "ffn>=1.1.2",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mibian>=0.1.3",
    "mlflow>=3.5.1",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "optuna-integration[mlflow]>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psutil>=7.1.2",
    "py-vollib>=1.0.1",
    "pydantic>=2.12.3",
    "pyfolio-reloaded>=0.9.9",
    "quantlib-python>=1.18",
    "quantstats>=0.0.77",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "typer>=0.20.0",
    "vectorbt>=0.28.1",
    "yfinance>=0.2.66",
]

[project.scripts]
rtradez = "rtradez.cli:main"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/appliedaisystems/rtradez"
Documentation = "https://rtradez.readthedocs.io"
Repository = "https://github.com/appliedaisystems/rtradez.git"
Issues = "https://github.com/appliedaisystems/rtradez/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "vectorbt.*",
    "quantstats.*",
    "mibian.*",
    "ta.*",
    "backtrader.*",
    "bt.*",
    "pyfolio.*",
    "quantlib.*",
    "arch.*",
    "ffn.*",
    "py_vollib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
